centrado de iconos

--- a/views/home.html
+++ b/views/home.html
@@ -5,113 +5,147 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercado Liebre</title>
+    <link href ="/css/styles.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
 </head>
 <body>
-<header>
-    <img src="/images/logo-mercado-liebre.svg" height="100px" width="360px">
-    <p>Logar para poner la barra de busqueda</p>
-</header>
+    <header>
+        <img src="/images/logo-mercado-liebre.svg" height="100px" width="360px">
+        <input type="text" placeholder="Burcar productos, marcas"> <br>
+        <i class ="fas fa-search"></i>
+    
+        <p class="cuotas"> <i class ="fas fa-hand-holding-usd" ></i>Comprá en cuotas y sin tarjeta de crédito</p>
 
-    <p>Comprá en cuotas y sin tarjeta de crédito</p>
-
-    <ul>
-        <li>   <a href="">Ofertas</a> </li>
-        <li>   <a href="">Tiendas Oficiales</a> </li>
-        <li>   <a href="">Vender</a> </li>
-        <li>   <a href="">Ayuda</a> </li>
-    </ul>
-    <ul>
-        <li>   <a href="">Creá tu cuenta</a> </li>
-        <li>   <a href="">Ingresá</a> </li>
-        <li>   <a href="">Mis compras</a> </li>
-    </ul>
-<div>
-    <img src="/images/img-home-banner.jpg" alt="" width="360px">
-</div>
+        <p>
+           <a href="">Ofertas</a> <br>
+           <a href="">Tiendas Oficiales</a> <br>
+           <a href="">Vender</a> <br>
+           <a href="">Ayuda</a> <br>
+        </p>
+        <p>
+           <a href="">Creá tu cuenta  </a><i class="far fa-address-card"></i> <br>
+           <a href="">Ingresá  </a> <i class="fas fa-sign-in-alt"></i> <br>
+           <a href="">Mis compras  </a><i class="fas fa-shopping-basket"></i> <br>
+        </p>
+        <div class="burger">
+            <button class="burger-menu">
+            <i class="fas fa-bars"></i>
+             </button>
+        </div>
+    </header>
+    <div>
+        <img src="/images/img-home-banner.jpg" alt="" width="360px">
+    </div>
     <main>
-    <ul>
-        <li><b>Sección: Basado en tu última visita</b></li>
-    </ul>
+        <ul>
+            <li class="visita"><b>Sección: Basado en tu última visita</b></li>
+        </ul>
         <img src="/images/img-cafetera-moulinex.jpg" alt="" width="360px">
-       <pre>
-            $6.770
-            40% OFF
+        <p class="precio">
+            $6.770 <br>
+        </p>
+        <p class="descuento">
+            40% OFF <br>
             Cafetera Moulinex
-       </pre>
+        </p>
 
-   
         <img src="/images/img-macbook-pro-2019.jpg" alt="" width="360px">
-         <pre>
-            $230.000
-            20% off
-            MacBook Pro 2019
-         </pre>
+        <p class="precio">
+            $230.000 <br>
+        </p>
+        <p class="descuento"> 
+             20% off <br>
+            MacBook Pro 2019 
+        </p>
        
          <img src="/images/img-samsung-galaxy-s10.jpg" alt="" width="360px">
          
-         <pre>
-            $70.500
-            10% off
+        <p class="precio">
+            $70.500 <br>
+        </p>
+        <p class="descuento">
+            10% off <br>
             Samsung Galaxy S10
-         </pre>
+        </p>
 
          <img src="/images/img-tv-samsung-smart.jpg" alt="" width="360px">
         
-         <pre>
-            $23.200
-            5% off
+        <p class="precio">
+            $23.200 <br>
+        </p>
+        <p class="descuento">
+            5% off <br>
             SmartTv Samsung 43"
-         </pre>
-        
-
-         <ul>
-            <li><b>Sección de Ofertas</b></li>
+         </p>
+        <ul>
+            <li class="visita"><b>Sección de Ofertas</b></li>
         </ul>
             <img src="/images/img-cafetera-moulinex.jpg" alt="" width="360px">
-           <pre>
-            $6.770
-            40% off
+        <p class="precio">
+            $6.770 <br>
+        </p>
+        <p class="descuento">
+            40% off <br>
             Cafetera Moulinex
-           </pre>
+        </p>
     
        
             <img src="/images/img-macbook-pro-2019.jpg" alt="" width="360px">
-             <pre>
-                $230.000
-                20% off
+        <p class="precio">
+                $230.000<br>
+        </p>
+        <p class="descuento">
+                20% off<br>
                 MacBook Pro 2019
-             </pre>
+        </p>
            
              <img src="/images/img-samsung-galaxy-s10.jpg" alt="" width="360px">
              
-             <pre>
-                $70.500
-                10% off
+        <p class="precio">
+                $70.500 <br>
+        </p>
+        <p class="descuento">
+                10% off <br>
                 Samsung Galaxy S10
-             </pre>
+        </p>
     
              <img src="/images/img-tv-samsung-smart.jpg" alt="" width="360px">
             
-             <pre>
-                $23.200
-                5% off
+        <p class="precio">
+                $23.200 <br>
+        </p>
+        <p class="descuento">
+                5% off <br>
                 SmartTv Samsung 43"
-             </pre>
+        </p>
 
     </main>
 
-    <footer>
-        <p>
-            <ul>
-                <li><h3>Pagá con tarjeta o en efectivo</h3><p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-                    puntos de pago. ¡Y siempre es seguro!</p></li>
-                <li><h3>Envío gratis desde $ 2.500</h3><p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-                    productos. Es un beneficio de Mercado Puntos.</p></li>
-                <li><h3>Seguridad, de principio a fin</h3><p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-                    porque estás siempre protegid@.</p></li>
-                <li><h3>Copyright © 1999-2020 MercadoLiebre S.R.L.</h3></li>
-            </ul>
-        </p>
+     <footer>
+        <section>
+            <i class="fas fa-credit-card"></i>
+            <h3>Paga con tarjeta o efectivo</h3>
+            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!</p>
+        </section>
+
+        <section>
+            <i class="fas fa-gift"></i>
+            <h3>Envío gratis desde $ 2.500</h3>
+            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
+        </section>
+
+        <section>
+            <i class="fas fa-user-shield"></i>
+            <h3>Seguridad, de principio a fin</h3>
+            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@</p>
+        </section>
+        <br>
+
+        <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+
     </footer>
 </body>
 </html>
