agregue camion verde

--- a/views/home.html
+++ b/views/home.html
@@ -40,88 +40,117 @@
         <img src="/images/img-home-banner.jpg" alt="" width="360px">
     </div>
     <main>
-        <ul>
-            <li class="visita"><b>Sección: Basado en tu última visita</b></li>
-        </ul>
+      
+        <p class="visita"><b>Basado en tu última visita</b></p>
+      
+     <article>
         <img src="/images/img-cafetera-moulinex.jpg" alt="" width="360px">
+        <div class="camion">
+            <i class="fas fa-truck "></i>
+        </div>
         <p class="precio">
             $6.770 <br>
         </p>
         <p class="descuento">
-            40% OFF <br>
-            Cafetera Moulinex
-        </p>
+            40% OFF <br></p>
+         <p class="articulo"> Cafetera Moulinex</p>   
+    </article>    
 
+    <article>
         <img src="/images/img-macbook-pro-2019.jpg" alt="" width="360px">
+        <div class="camion">
+            <i class="fas fa-truck "></i>
+        </div>
         <p class="precio">
             $230.000 <br>
         </p>
         <p class="descuento"> 
-             20% off <br>
-            MacBook Pro 2019 
+             20% off <br></p>
+             <p class="articulo"> MacBook Pro 2019 
         </p>
-       
-         <img src="/images/img-samsung-galaxy-s10.jpg" alt="" width="360px">
-         
+    </article>   
+    <article>
+        <img src="/images/img-samsung-galaxy-s10.jpg" alt="" width="360px">
+        <div class="camion">
+            <i class="fas fa-truck "></i>
+        </div> 
         <p class="precio">
             $70.500 <br>
         </p>
-        <p class="descuento">
+        <p class="descuento"> </p>
             10% off <br>
-            Samsung Galaxy S10
+            <p class="articulo">  Samsung Galaxy S10
         </p>
-
+    </article> 
+    <article>
          <img src="/images/img-tv-samsung-smart.jpg" alt="" width="360px">
-        
+         <div class="camion">
+            <i class="fas fa-truck "></i>
+        </div>
         <p class="precio">
             $23.200 <br>
         </p>
-        <p class="descuento">
+        <p class="descuento"> </p>
             5% off <br>
-            SmartTv Samsung 43"
+            <p class="articulo">  SmartTv Samsung 43"
          </p>
-        <ul>
-            <li class="visita"><b>Sección de Ofertas</b></li>
-        </ul>
-            <img src="/images/img-cafetera-moulinex.jpg" alt="" width="360px">
+        </article> 
+         
+            <p class="visita"><b>Sección de Ofertas</b></p>
+        
+   
+    <article>
+        <img src="/images/img-cafetera-moulinex.jpg" alt="" width="360px">
+        <div class="camion">
+            <i class="fas fa-truck "></i>
+        </div>
         <p class="precio">
             $6.770 <br>
         </p>
-        <p class="descuento">
+        <p class="descuento"> </p>
             40% off <br>
-            Cafetera Moulinex
+            <p class="articulo">     Cafetera Moulinex
         </p>
-    
-       
+    </article> 
+    <article>
             <img src="/images/img-macbook-pro-2019.jpg" alt="" width="360px">
+            <div class="camion">
+                <i class="fas fa-truck "></i>
+            </div>
         <p class="precio">
-                $230.000<br>
+            $230.000<br>
         </p>
         <p class="descuento">
-                20% off<br>
-                MacBook Pro 2019
+                20% off<br> </p>
+                <p class="articulo">       MacBook Pro 2019
         </p>
-           
-             <img src="/images/img-samsung-galaxy-s10.jpg" alt="" width="360px">
-             
+    </article>    
+    <article>
+        <img src="/images/img-samsung-galaxy-s10.jpg" alt="" width="360px">
+        <div class="camion">
+            <i class="fas fa-truck "></i>
+        </div>    
         <p class="precio">
                 $70.500 <br>
         </p>
         <p class="descuento">
-                10% off <br>
-                Samsung Galaxy S10
+                10% off <br> </p>
+                <p class="articulo">        Samsung Galaxy S10
         </p>
-    
+    </article> 
+    <article> 
              <img src="/images/img-tv-samsung-smart.jpg" alt="" width="360px">
-            
+        <div class="camion">
+             <i class="fas fa-truck "></i>
+        </div>    
         <p class="precio">
                 $23.200 <br>
         </p>
         <p class="descuento">
-                5% off <br>
-                SmartTv Samsung 43"
+                5% off <br> </p>
+                <p class="articulo">         SmartTv Samsung 43"
         </p>
-
+    </article> 
     </main>
 
      <footer>
