--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,6 +7,10 @@ html {
     font-family: Roboto;
 }
 
+main {
+    text-align: center;
+}
+
 p {
     font-size: 12px;
 }
@@ -17,10 +21,14 @@ p {
 
 .precio {
     font-size: 18px;
+    font-weight: 300;
 }
 
 .descuento {
-    font-size: 16px;}
+    font-size: 16px;
+    font-weight: 300;
+    color:  #39b54a;
+}
 
 .cuotas {
     margin-left: 10%;
@@ -69,4 +77,23 @@ footer h3 {
     font-size: 16px;
     margin: 0 auto;
     text-align: center;
+}
+
+.camion {
+    font-size: 32px;
+    text-align: center;
+    /*padding: 1rem;*/
+    color: #39b54a;
+}
+
+.articulo {
+
+    font-size: 18px;
+    font-weight: bold;
+}
+
+article {
+    
+    background-color: white;
+ 
 }
