--- a/views/home.html
+++ b/views/home.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <header>
@@ -19,13 +20,13 @@
     
         <p class="cuotas"> <i class ="fas fa-hand-holding-usd" ></i>Comprá en cuotas y sin tarjeta de crédito</p>
 
-        <p>
+        <p class="site">
            <a href="">Ofertas</a> <br>
            <a href="">Tiendas Oficiales</a> <br>
            <a href="">Vender</a> <br>
            <a href="">Ayuda</a> <br>
         </p>
-        <p>
+        <p class="login">
            <a href="">Creá tu cuenta  </a><i class="far fa-address-card"></i> <br>
            <a href="">Ingresá  </a> <i class="fas fa-sign-in-alt"></i> <br>
            <a href="">Mis compras  </a><i class="fas fa-shopping-basket"></i> <br>
@@ -45,45 +46,52 @@
       
      <article>
         <img src="/images/img-cafetera-moulinex.jpg" alt="" width="360px">
-        <div class="camion">
-            <i class="fas fa-truck "></i>
-        </div>
-        <p class="precio">
-            $6.770 <br>
-        </p>
-        <p class="descuento">
-            40% OFF <br></p>
-         <p class="articulo"> Cafetera Moulinex</p>   
+        <section>
+            <div class="camion">
+                <i class="fas fa-truck "></i>
+            </div>
+            <p class="precio">
+                $6.770 <br>
+            </p>
+            <p class="descuento">
+                40% OFF <br></p>
+            <p class="articulo"> Cafetera Moulinex</p>  
+            </section> 
     </article>    
 
     <article>
         <img src="/images/img-macbook-pro-2019.jpg" alt="" width="360px">
-        <div class="camion">
-            <i class="fas fa-truck "></i>
-        </div>
-        <p class="precio">
-            $230.000 <br>
-        </p>
-        <p class="descuento"> 
-             20% off <br></p>
-             <p class="articulo"> MacBook Pro 2019 
-        </p>
+            <section>
+            <div class="camion">
+                <i class="fas fa-truck "></i>
+            </div>
+            <p class="precio">
+                $230.000 <br>
+            </p>
+            <p class="descuento"> 
+                20% off <br></p>
+                <p class="articulo"> MacBook Pro 2019 
+            </p>
+            </section>
     </article>   
     <article>
         <img src="/images/img-samsung-galaxy-s10.jpg" alt="" width="360px">
-        <div class="camion">
-            <i class="fas fa-truck "></i>
-        </div> 
-        <p class="precio">
-            $70.500 <br>
-        </p>
-        <p class="descuento"> </p>
-            10% off <br>
-            <p class="articulo">  Samsung Galaxy S10
-        </p>
+        <section>
+            <div class="camion">
+                <i class="fas fa-truck "></i>
+            </div> 
+            <p class="precio">
+                $70.500 <br>
+            </p>
+            <p class="descuento"> </p>
+                10% off <br>
+                <p class="articulo">  Samsung Galaxy S10
+            </p>
+    </section>
     </article> 
     <article>
          <img src="/images/img-tv-samsung-smart.jpg" alt="" width="360px">
+        <section>
          <div class="camion">
             <i class="fas fa-truck "></i>
         </div>
@@ -97,10 +105,11 @@
         </article> 
          
             <p class="visita"><b>Sección de Ofertas</b></p>
-        
+        </section>
    
     <article>
         <img src="/images/img-cafetera-moulinex.jpg" alt="" width="360px">
+        <section>
         <div class="camion">
             <i class="fas fa-truck "></i>
         </div>
@@ -111,9 +120,11 @@
             40% off <br>
             <p class="articulo">     Cafetera Moulinex
         </p>
+    </section>
     </article> 
     <article>
             <img src="/images/img-macbook-pro-2019.jpg" alt="" width="360px">
+            <section>
             <div class="camion">
                 <i class="fas fa-truck "></i>
             </div>
@@ -124,9 +135,11 @@
                 20% off<br> </p>
                 <p class="articulo">       MacBook Pro 2019
         </p>
+    </section>
     </article>    
     <article>
         <img src="/images/img-samsung-galaxy-s10.jpg" alt="" width="360px">
+        <section>
         <div class="camion">
             <i class="fas fa-truck "></i>
         </div>    
@@ -137,10 +150,12 @@
                 10% off <br> </p>
                 <p class="articulo">        Samsung Galaxy S10
         </p>
+    </section>
     </article> 
     <article> 
              <img src="/images/img-tv-samsung-smart.jpg" alt="" width="360px">
-        <div class="camion">
+        <section>
+             <div class="camion">
              <i class="fas fa-truck "></i>
         </div>    
         <p class="precio">
@@ -150,6 +165,7 @@
                 5% off <br> </p>
                 <p class="articulo">         SmartTv Samsung 43"
         </p>
+    </section>
     </article> 
     </main>
 
