--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -141,6 +141,35 @@ article {
     background-color: white;
     font-size: 19px;
 }
+.create-form {
+    padding: 20px 15px;
+}
+
+.control-formulario {
+    margin-bottom: 15px;
+
+}
+
+.control-formulario label {
+    margin-bottom: 5px;
+    font-style: italic;
+    display: block;
+}
+
+.control {
+    width: 100%;
+    padding: 8px;
+}
+
+.boton-formulario {
+    background-color: var(--Verde);
+    border: none;
+    font-size: 20px;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px ;
+}
+
 
 img {
     width: 70%;
