--- a/views/home.html
+++ b/views/home.html
@@ -38,7 +38,7 @@
                 </ul>
                 <ul class='right-nav'>
                     <li type='none'>
-                        <a href="#">Creá tu cuenta </a>
+                        <a href="/register">Creá tu cuenta </a>
                         <i class="far fa-id-card"></i>
                     </li>
                     <li type='none'>
@@ -56,9 +56,49 @@
                         <a href="" class='hamburguer-buton'><i class="fas fa-bars"></i></a>
                     </div>
          </header>
+<!-- Formulario
+<form action="/crear-producto" method="POST" class="create-form">
+    <div class="control-formulario">
+        <label>Nombre del prodcuto:</label>
+        <input type="text" name="nombre" class="control">
+    </div>
+    <div class="control-formulario">
+        <label>Precio:</label>
+        <input type="text" name="precio" placeholder="123.56" class="control">
+    </div>
+    <div class="control-formulario">
+        <label for="">Categoria:</label>
+        <select name="categoria" class="control">
+            <option value="hogar">Hogar</option>
+            <option value="electro">Electro</option>
+            <option value="indumentaria">Indumentaria</option>
+        </select>
+    </div>
+    <div class="control-formulario">
+        <label for="">Ciudad:</label>
+        <select name="ciudad" class="control">
+            <option value="baires">Buenos Aires</option>
+            <option value="ros">Rosario</option>
+            <option value="mdz">Mendoza</option>
+        </select>
+    </div>
+    <div class="control-formulario">
+        <label >Descripcion:</label>
+        <textarea name="descripcion" id="" cols="30" rows="10" class="control"></textarea>
+    </div>
+    <div class="control-formulario">
+        <label>Esta en Oferta:</label>
+        <input type="radio" name="enOferta" id="">
+    </div>
+    <button type="submit" class="boton-formulario">Guardar</button>
+    <button type="reset" class="boton-formulario">Borrar</button>
+   
+</form>-->
+
         <div>
             <img class='banner'src="/images/img-home-banner.jpg" alt="" width="360px">
         </div>
+        
     <main>
         <p class="visita"><b>Basado en tu última visita</b></p>
         
