agregando estilos a los form

--- a/views/home.html
+++ b/views/home.html
@@ -42,7 +42,7 @@
                         <i class="far fa-id-card"></i>
                     </li>
                     <li type='none'>
-                        <a href="#">Ingresá </a>
+                        <a href="/login">Ingresá </a>
                         <i class="fas fa-sign-in-alt"></i>
                     </li>
                     <li type='none'>
@@ -56,8 +56,8 @@
                         <a href="" class='hamburguer-buton'><i class="fas fa-bars"></i></a>
                     </div>
          </header>
-<!-- Formulario
-<form action="/crear-producto" method="POST" class="create-form">
+<!-- 
+<form action="/" method="POST" class="create-form">
     <div class="control-formulario">
         <label>Nombre del prodcuto:</label>
         <input type="text" name="nombre" class="control">
@@ -173,9 +173,9 @@
                         </div>
         </section>           
                 </article> 
-         <section class="seccionOOfetas">
                 <p class="ofertas"><b>Sección de Ofertas</b></p>
-    
+                
+                <section class="seccionOOfetas">
                 <article>
                     <img src="/images/img-cafetera-moulinex.jpg" alt="" width="360px">
                     <div class="abajoArticulo">
