--- a/views/register.html
+++ b/views/register.html
@@ -60,28 +60,28 @@
         <!-- Formulario -->
         <form action="/" method="POST" class="create-form">
             <div class="control-formulario">
-                <label>Nombre y Apellido:</label>
-                <input type="text" name="nombre" class="control">
+                <label></label>
+                <input type="text" name="nombre" class="control" placeholder="Nombre y Apellido:">
                 <span class="feedback"></span>
             </div>
     
             <div class="control-formulario">
-                <label>Nombre de usuari@:</label>
-                <input type="text" name="usuario" class="control">
+                <label></label>
+                <input type="text" name="usuario" class="control" placeholder="Nombre de usuari@">
             </div>
             
-            <div class="control-formulario">
-                <label for="">Fecha de Nacimiento:</label>
-                <input type="date" name="fecha">
+            <div class=”control-formulario”>
+                <label  for="">Fecha de Nacimiento:  </label>
+                <input  input type="date" name="fecha">
             </div>
     
             <div class="control-formulario">
-                <label for="">Domicilio:</label>
-                <input type="text" name="domicilio" class="control">
+                <label for=""></label>
+                <input type="text" name="domicilio" class="control" placeholder="Domicilio">
             </div>
     
             <div class="control-formulario">
-                <label for="">Perfil del usuario (¿desea commprar o vender?):</label>
+                <label for="">Perfil del usuario</label>
                 <label for="">Comprar</label>
                 <input type="radio" name="compra-venta" value="Comprar">
                 <label for="">Vender</label>
