--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,6 +21,7 @@ body {
 header {
     background-color: var(--Amarillo);
     padding: 24px;
+
 }
 
 .logo {
@@ -81,6 +82,7 @@ main section {
 
 .banner {
     width: 100%;
+  
 }
 
 h3 {
@@ -105,7 +107,7 @@ html {
     font-weight: 300;
 }
 
-.descuento {
+p.descuento {
     font-size: 16px;
     font-weight: 300;
     color:  #39b54a;
@@ -119,6 +121,11 @@ html {
     text-align: left;
     padding: 24px;
     color: var(--Gris-claro);
+    
+}
+
+.articulo:hover {
+    display: none;
 }
 
 .abajoArticulo {
@@ -138,6 +145,10 @@ html {
     position: absolute;
     right: 20px;
     top: -15px;
+}
+
+.abajoArticulo i:hover {
+    transform: rotate(270deg);
 }
 
 article {
@@ -168,11 +179,7 @@ article {
     
 }
 
-label {
-    display: block;
-    font: 1rem 'Fira Sans', sans-serif;
-  
-}
+
 .boton-formulario {
     background-color: var(--Verde);
     border: none;
@@ -180,6 +187,10 @@ label {
     color: white;
     padding: 5px 10px;
     border-radius: 5px ;
+}
+
+.boton-formulario:hover {
+    background-color: #0022AA;
 }
 
 
@@ -218,6 +229,14 @@ footer i {
     margin-top: 60px;
 }
 
+.copyright {
+text-align: center;
+}
+
+footer i:hover {
+   color: red;
+}
+
 
 @media (min-width: 769px) {
 
@@ -230,7 +249,7 @@ footer i {
     .navegador {
         display: block;
     }
-    article {
+    article:hover {
         box-shadow: 0px 0px 10px rgb(100, 100, 100);
     }
     .logo {
@@ -252,6 +271,11 @@ footer i {
     }
     ul li {
         margin: 0 6px;
+    }
+
+    footer {
+       display: flex;
+       justify-content: center;
     }
 
 }
