--- a/views/home.html
+++ b/views/home.html
@@ -108,7 +108,9 @@
                     <img src="/images/img-cafetera-moulinex.jpg" alt="" width="360px">
                     
                     <div class="abajoArticulo">
-                                <i class="fas fa-truck camion"></i>
+                       
+                             <i class="fas fa-truck camion"></i>
+                     
                         <div class="precioDescuento"> 
                             <p class="precio">
                                 $6.770 <br>
@@ -123,33 +125,30 @@
 
                 <article>
                     <img src="/images/img-macbook-pro-2019.jpg" alt="" width="360px">
-                        <div class="abajoArticulo">
-                            <div class="camion">
-                                <i class="fas fa-truck "></i>
-                            </div>
+                    
+                        <div class="abajoArticulo">                          
+                                <i class="fas fa-truck "></i>                           
                             <div class="precioDescuento">
                                 <p class="precio">
                                     $230.000 <br>
                                 </p>
                                 <p class="descuento"> 
                                     20% off <br></p>
-                                    <p class="articulo"> MacBook Pro 2019 
-                                </p>
+                                    <p class="articulo"> MacBook Pro 2019</p>
                             </div>
                         </div>
                 </article>   
                 <article>
                     <img src="/images/img-samsung-galaxy-s10.jpg" alt="" width="360px">
-                         <div class="abajoArticulo">
-                            <div class="camion">
-                                <i class="fas fa-truck "></i>
-                            </div>
+                         
+                     <div class="abajoArticulo">                            
+                                <i class="fas fa-truck "></i>                          
                             <div class="precioDescuento">
                                 <p class="precio">
                                     $70.500 <br>
                                 </p>
-                                <p class="descuento"> </p>
-                                    10% off <br>
+                                <p class="descuento">
+                                    10% off <br>  </p>
                                     <p class="articulo">  Samsung Galaxy S10
                                 </p>
                             </div> 
@@ -165,14 +164,14 @@
                                 <p class="precio">
                                     $23.200 <br>
                                 </p>
-                                <p class="descuento"> </p>
-                                    5% off <br>
+                                <p class="descuento"> 
+                                    5% off <br></p>
                                     <p class="articulo">  SmartTv Samsung 43"
                                 </p>
                             </div>
                         </div>
+                    </article> 
         </section>           
-                </article> 
                 <p class="ofertas"><b>Sección de Ofertas</b></p>
                 
                 <section class="seccionOOfetas">
@@ -186,8 +185,8 @@
                         <p class="precio">
                             $6.770 <br>
                         </p>
-                        <p class="descuento"> </p>
-                            40% off <br>
+                        <p class="descuento"> 
+                            40% off <br></p>
                             <p class="articulo">     Cafetera Moulinex
                         </p>
                         </div>
@@ -266,9 +265,9 @@
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@</p>
         </section>
         <br>
-
-        <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
-
     </footer>
+
+        <p class="copyright" >Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+
 </body>
 </html>
